log/build_2022-11-15_19-21-02/master_node/stderr.log
  File "/home/cimi/Documents/Workspace/ProjectRos2XYolo/install/master_node/lib/python3.8/site-packages/master_node/master_node.py", line 31
    while msg2.mission = 0:
                       ^
SyntaxError: invalid syntax

